samples/_failures_safe/1761160198_a97c75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdc1140c.c: In function ‘main’:
./samples/SAFE/__tmp_bdc1140c.c:138:9: error: expected declaration or statement at end of input
  138 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_bdc1140c.c:138:9: error: expected declaration or statement at end of input
